--- a/bike/src/latex/class_bicicleta.tex
+++ b/bike/src/latex/class_bicicleta.tex
@@ -13,80 +13,60 @@
 \subsection*{Public Member Functions}
 \begin{DoxyCompactItemize}
 \item 
-\hypertarget{class_bicicleta_af248a13124a9939cc3fa8eb3be56fdaf}{{\bfseries Bicicleta} (unsigned int id, string tipo\+\_\+bici, string size, int mudancas, bool avariad, unsigned int preco1)}\label{class_bicicleta_af248a13124a9939cc3fa8eb3be56fdaf}
+\hypertarget{class_bicicleta_ad1af58c3a03f2b8dc081da7b7757c653}{\hyperlink{class_bicicleta_ad1af58c3a03f2b8dc081da7b7757c653}{Bicicleta} ()}\label{class_bicicleta_ad1af58c3a03f2b8dc081da7b7757c653}
 
-\item 
-\hypertarget{class_bicicleta_ac85afd4971d0b6eada6eb16f9a924118}{int {\bfseries get\+I\+D} ()}\label{class_bicicleta_ac85afd4971d0b6eada6eb16f9a924118}
+\begin{DoxyCompactList}\small\item\em Default constructor of Bike It initializes the bike as being bike 0,\char`\"{}sem cesto\char`\"{}, \char`\"{}adulto\char`\"{}, 1, false, 40. \end{DoxyCompactList}\item 
+\hyperlink{class_bicicleta_af248a13124a9939cc3fa8eb3be56fdaf}{Bicicleta} (unsigned int id, string tipo\+\_\+bici, string size, int mudancas, bool avariad, unsigned int preco1)
+\begin{DoxyCompactList}\small\item\em Creates a bike. \end{DoxyCompactList}\item 
+int \hyperlink{class_bicicleta_ac85afd4971d0b6eada6eb16f9a924118}{get\+I\+D} ()
+\begin{DoxyCompactList}\small\item\em gets the bike's id \end{DoxyCompactList}\item 
+int \hyperlink{class_bicicleta_a956979f7f43934c329b143b9d6c2da49}{get\+Velocidades} ()
+\begin{DoxyCompactList}\small\item\em gets the bike's shifts \end{DoxyCompactList}\item 
+string \hyperlink{class_bicicleta_a4582ea6f608f9d188df0b563961d7df5}{get\+Tipo} ()
+\begin{DoxyCompactList}\small\item\em gets the bike's type \end{DoxyCompactList}\item 
+string \hyperlink{class_bicicleta_a9733b1f60caff10aa814dfe38e8e459f}{get\+Tamanho} ()
+\begin{DoxyCompactList}\small\item\em gets the bike's size \end{DoxyCompactList}\item 
+string \hyperlink{class_bicicleta_a98ab039cfa35975f6d1ff2223a625a7f}{get\+Empresa} ()
+\begin{DoxyCompactList}\small\item\em gets the bike's company \end{DoxyCompactList}\item 
+bool \hyperlink{class_bicicleta_adcf9b86f83a83b15c98f70918469e664}{get\+Avariada} ()
+\begin{DoxyCompactList}\small\item\em gets the bike's state of damage \end{DoxyCompactList}\item 
+\hypertarget{class_bicicleta_a9e95e5a5744c9385a7a270876bf56f8c}{void \hyperlink{class_bicicleta_a9e95e5a5744c9385a7a270876bf56f8c}{set\+Avariada} ()}\label{class_bicicleta_a9e95e5a5744c9385a7a270876bf56f8c}
 
-\item 
-\hypertarget{class_bicicleta_a956979f7f43934c329b143b9d6c2da49}{int {\bfseries get\+Velocidades} ()}\label{class_bicicleta_a956979f7f43934c329b143b9d6c2da49}
-
-\item 
-\hypertarget{class_bicicleta_a4582ea6f608f9d188df0b563961d7df5}{string {\bfseries get\+Tipo} ()}\label{class_bicicleta_a4582ea6f608f9d188df0b563961d7df5}
-
-\item 
-\hypertarget{class_bicicleta_a9733b1f60caff10aa814dfe38e8e459f}{string {\bfseries get\+Tamanho} ()}\label{class_bicicleta_a9733b1f60caff10aa814dfe38e8e459f}
-
-\item 
-\hypertarget{class_bicicleta_a98ab039cfa35975f6d1ff2223a625a7f}{string {\bfseries get\+Empresa} ()}\label{class_bicicleta_a98ab039cfa35975f6d1ff2223a625a7f}
-
-\item 
-\hypertarget{class_bicicleta_adcf9b86f83a83b15c98f70918469e664}{bool {\bfseries get\+Avariada} ()}\label{class_bicicleta_adcf9b86f83a83b15c98f70918469e664}
-
-\item 
-\hypertarget{class_bicicleta_a9e95e5a5744c9385a7a270876bf56f8c}{void {\bfseries set\+Avariada} ()}\label{class_bicicleta_a9e95e5a5744c9385a7a270876bf56f8c}
-
-\item 
-\hypertarget{class_bicicleta_adfccbf2a5c83a6c34c3454c78244cffc}{int {\bfseries get\+Preco} ()}\label{class_bicicleta_adfccbf2a5c83a6c34c3454c78244cffc}
-
-\item 
-\hypertarget{class_bicicleta_a830e5be0d74c904f9e1b4d0e46fcfbf6}{void {\bfseries set\+Preco\+Dia} (int velocidade, string tamanho)}\label{class_bicicleta_a830e5be0d74c904f9e1b4d0e46fcfbf6}
-
-\item 
-\hypertarget{class_bicicleta_a540f165785ed17b710a67c2a59991a48}{bool {\bfseries velocidades\+\_\+valido} (int veloc)}\label{class_bicicleta_a540f165785ed17b710a67c2a59991a48}
-
-\item 
-\hypertarget{class_bicicleta_a34990240a07a851793053ca4063a7b8e}{string {\bfseries tipo\+\_\+valido} ()}\label{class_bicicleta_a34990240a07a851793053ca4063a7b8e}
-
-\item 
-\hypertarget{class_bicicleta_a900359b6b195db211f479fe5929f8d81}{string {\bfseries imprime} ()}\label{class_bicicleta_a900359b6b195db211f479fe5929f8d81}
-
-\item 
-\hypertarget{class_bicicleta_a6e71bf61a37f13c3da8e620760f8f4b9}{void {\bfseries set\+I\+D} (int id)}\label{class_bicicleta_a6e71bf61a37f13c3da8e620760f8f4b9}
-
-\item 
-\hypertarget{class_bicicleta_a2318e7e7a22c44283e143f3c2942d721}{void {\bfseries set\+Tipo} (string tipo)}\label{class_bicicleta_a2318e7e7a22c44283e143f3c2942d721}
-
-\item 
-\hypertarget{class_bicicleta_ad5861007b46516987cab6fa7cf6adee1}{void {\bfseries set\+Regs\+Bicis} (vector$<$ \hyperlink{class_registo}{Registo} $\ast$ $>$ bicis)}\label{class_bicicleta_ad5861007b46516987cab6fa7cf6adee1}
-
-\item 
-\hypertarget{class_bicicleta_a05f9c922b7ebc82a1f223ba8c5d64cc2}{vector$<$ \hyperlink{class_registo}{Registo} $\ast$ $>$ {\bfseries get\+Regs\+Bicis} () const }\label{class_bicicleta_a05f9c922b7ebc82a1f223ba8c5d64cc2}
-
-\item 
-\hypertarget{class_bicicleta_a2520579ebcc40f9cc2ee05392f3004a2}{void {\bfseries adiciona\+Registo} (\hyperlink{class_registo}{Registo} $\ast$reg1)}\label{class_bicicleta_a2520579ebcc40f9cc2ee05392f3004a2}
-
-\item 
-\hypertarget{class_bicicleta_a28df135cc7d332d43ca85647fa60175a}{void {\bfseries set\+Tamanho} (string tamanho)}\label{class_bicicleta_a28df135cc7d332d43ca85647fa60175a}
-
-\item 
-\hypertarget{class_bicicleta_aef781f0496eab00a16c354d52f9f1686}{void {\bfseries set\+Veloc} (int velocidades)}\label{class_bicicleta_aef781f0496eab00a16c354d52f9f1686}
-
-\item 
-\hypertarget{class_bicicleta_a791cdbbf5016ea3a0229915b84a52a04}{bool {\bfseries remove\+\_\+util} (string nome)}\label{class_bicicleta_a791cdbbf5016ea3a0229915b84a52a04}
-
-\item 
-\hypertarget{class_bicicleta_a570101dbac9300d107433c52ae698915}{string {\bfseries get\+\_\+str} () const }\label{class_bicicleta_a570101dbac9300d107433c52ae698915}
-
-\item 
-\hypertarget{class_bicicleta_aff75cc7f6d1a554a8b7c663834115575}{void {\bfseries make\+\_\+str} (string bike)}\label{class_bicicleta_aff75cc7f6d1a554a8b7c663834115575}
-
-\item 
+\begin{DoxyCompactList}\small\item\em Sets the bike as avariada (damaged) Sets the bike as damaged (avariada) \end{DoxyCompactList}\item 
+int \hyperlink{class_bicicleta_adfccbf2a5c83a6c34c3454c78244cffc}{get\+Preco} ()
+\begin{DoxyCompactList}\small\item\em Gets the bike's price. \end{DoxyCompactList}\item 
+void \hyperlink{class_bicicleta_a830e5be0d74c904f9e1b4d0e46fcfbf6}{set\+Preco\+Dia} (int velocidade, string tamanho)
+\begin{DoxyCompactList}\small\item\em Sets a the price of the bike per day. \end{DoxyCompactList}\item 
+bool \hyperlink{class_bicicleta_a540f165785ed17b710a67c2a59991a48}{velocidades\+\_\+valido} (int veloc)
+\begin{DoxyCompactList}\small\item\em Shifts are valid. \end{DoxyCompactList}\item 
+string \hyperlink{class_bicicleta_a34990240a07a851793053ca4063a7b8e}{tipo\+\_\+valido} ()
+\begin{DoxyCompactList}\small\item\em Type is valid. \end{DoxyCompactList}\item 
+string \hyperlink{class_bicicleta_a900359b6b195db211f479fe5929f8d81}{imprime} ()
+\begin{DoxyCompactList}\small\item\em Print a bike. \end{DoxyCompactList}\item 
+void \hyperlink{class_bicicleta_a6e71bf61a37f13c3da8e620760f8f4b9}{set\+I\+D} (int id)
+\begin{DoxyCompactList}\small\item\em Sets the id to the bike. \end{DoxyCompactList}\item 
+void \hyperlink{class_bicicleta_a2318e7e7a22c44283e143f3c2942d721}{set\+Tipo} (string tipo)
+\begin{DoxyCompactList}\small\item\em Sets the bike's type. \end{DoxyCompactList}\item 
+void \hyperlink{class_bicicleta_ad5861007b46516987cab6fa7cf6adee1}{set\+Regs\+Bicis} (vector$<$ \hyperlink{class_registo}{Registo} $\ast$ $>$ bicis)
+\begin{DoxyCompactList}\small\item\em Sets the rental record. \end{DoxyCompactList}\item 
+vector$<$ \hyperlink{class_registo}{Registo} $\ast$ $>$ \hyperlink{class_bicicleta_a05f9c922b7ebc82a1f223ba8c5d64cc2}{get\+Regs\+Bicis} () const 
+\begin{DoxyCompactList}\small\item\em Gets the rental record. \end{DoxyCompactList}\item 
+void \hyperlink{class_bicicleta_a2520579ebcc40f9cc2ee05392f3004a2}{adiciona\+Registo} (\hyperlink{class_registo}{Registo} $\ast$reg1)
+\begin{DoxyCompactList}\small\item\em add a rental record to the vector of regists \end{DoxyCompactList}\item 
+void \hyperlink{class_bicicleta_a28df135cc7d332d43ca85647fa60175a}{set\+Tamanho} (string tamanho)
+\begin{DoxyCompactList}\small\item\em Sets a new size to the bike. \end{DoxyCompactList}\item 
+void \hyperlink{class_bicicleta_aef781f0496eab00a16c354d52f9f1686}{set\+Veloc} (int velocidades)
+\begin{DoxyCompactList}\small\item\em Sets a new shift to the bike. \end{DoxyCompactList}\item 
+bool \hyperlink{class_bicicleta_a791cdbbf5016ea3a0229915b84a52a04}{remove\+\_\+util} (string nome)
+\begin{DoxyCompactList}\small\item\em Removes the user with the name nome. \end{DoxyCompactList}\item 
+string \hyperlink{class_bicicleta_a570101dbac9300d107433c52ae698915}{get\+\_\+str} () const 
+\begin{DoxyCompactList}\small\item\em Get string that represents the bike This function is used in \hyperlink{class_rede_abec1da6660663cd58e6851737219959e}{Rede\+::store\+Info()}, because it converts the bike object to a multiple line string containing all of it's information except the rental logs. \end{DoxyCompactList}\item 
+void \hyperlink{class_bicicleta_aff75cc7f6d1a554a8b7c663834115575}{make\+\_\+str} (string bike)
+\begin{DoxyCompactList}\small\item\em Make a bike from a string that represents it. \end{DoxyCompactList}\item 
 void \hyperlink{class_bicicleta_ae48de57881e09ac89a84558c79894640}{set\+Empresa} (string emp)
 \begin{DoxyCompactList}\small\item\em Sets the empresa attribute of the object to emp. \end{DoxyCompactList}\item 
-\hypertarget{class_bicicleta_a0f6d8c8efea7822160a397ef040438d1}{\hyperlink{class_registo}{Registo} $\ast$ {\bfseries ultimo\+\_\+reg} () const }\label{class_bicicleta_a0f6d8c8efea7822160a397ef040438d1}
-
-\end{DoxyCompactItemize}
+\hyperlink{class_registo}{Registo} $\ast$ \hyperlink{class_bicicleta_a0f6d8c8efea7822160a397ef040438d1}{ultimo\+\_\+reg} () const 
+\begin{DoxyCompactList}\small\item\em Show the last of the rental records. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
@@ -94,7 +74,232 @@ void \hyperlink{class_bicicleta_ae48de57881e09ac89a84558c79894640}{set\+Empresa}
 
 This class is used to represent bikes, storing all it's important features like size or type, identifying it with an I\+D and storing the record of it's use 
 
+\subsection{Constructor \& Destructor Documentation}
+\hypertarget{class_bicicleta_af248a13124a9939cc3fa8eb3be56fdaf}{\index{Bicicleta@{Bicicleta}!Bicicleta@{Bicicleta}}
+\index{Bicicleta@{Bicicleta}!Bicicleta@{Bicicleta}}
+\subsubsection[{Bicicleta}]{\setlength{\rightskip}{0pt plus 5cm}Bicicleta\+::\+Bicicleta (
+\begin{DoxyParamCaption}
+\item[{unsigned int}]{id, }
+\item[{string}]{tipo\+\_\+bici, }
+\item[{string}]{size, }
+\item[{int}]{mudancas, }
+\item[{bool}]{avariad, }
+\item[{unsigned int}]{preco1}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_af248a13124a9939cc3fa8eb3be56fdaf}
+
+
+Creates a bike. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em id} & -\/ Name given to the new the bike \\
+\hline
+{\em tipo\+\_\+bici} & -\/ the type of the bike \\
+\hline
+{\em size} & -\/ what size is the bike for \\
+\hline
+{\em mudanças} & -\/ the number of shifts of the bike \\
+\hline
+{\em avariad} & -\/ if the bike is broken or not \\
+\hline
+{\em preco1} & -\/ the price of the bike Creates bike with a new id, new tipo\+\_\+bici, new size, new mudancas, new avariad and new preco1 \\
+\hline
+\end{DoxyParams}
+
+
 \subsection{Member Function Documentation}
+\hypertarget{class_bicicleta_a2520579ebcc40f9cc2ee05392f3004a2}{\index{Bicicleta@{Bicicleta}!adiciona\+Registo@{adiciona\+Registo}}
+\index{adiciona\+Registo@{adiciona\+Registo}!Bicicleta@{Bicicleta}}
+\subsubsection[{adiciona\+Registo}]{\setlength{\rightskip}{0pt plus 5cm}void Bicicleta\+::adiciona\+Registo (
+\begin{DoxyParamCaption}
+\item[{{\bf Registo} $\ast$}]{reg1}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_a2520579ebcc40f9cc2ee05392f3004a2}
+
+
+add a rental record to the vector of regists 
+
+
+\begin{DoxyParams}{Parameters}
+{\em $\ast$reg1} & -\/ the rental record we want to put on the vector of regists (rental records) Add a rental record to the vector we have of rental records \\
+\hline
+\end{DoxyParams}
+\hypertarget{class_bicicleta_a570101dbac9300d107433c52ae698915}{\index{Bicicleta@{Bicicleta}!get\+\_\+str@{get\+\_\+str}}
+\index{get\+\_\+str@{get\+\_\+str}!Bicicleta@{Bicicleta}}
+\subsubsection[{get\+\_\+str}]{\setlength{\rightskip}{0pt plus 5cm}string Bicicleta\+::get\+\_\+str (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+) const}}\label{class_bicicleta_a570101dbac9300d107433c52ae698915}
+
+
+Get string that represents the bike This function is used in \hyperlink{class_rede_abec1da6660663cd58e6851737219959e}{Rede\+::store\+Info()}, because it converts the bike object to a multiple line string containing all of it's information except the rental logs. 
+
+\begin{DoxyReturn}{Returns}
+string representing bike info 
+\end{DoxyReturn}
+\hypertarget{class_bicicleta_adcf9b86f83a83b15c98f70918469e664}{\index{Bicicleta@{Bicicleta}!get\+Avariada@{get\+Avariada}}
+\index{get\+Avariada@{get\+Avariada}!Bicicleta@{Bicicleta}}
+\subsubsection[{get\+Avariada}]{\setlength{\rightskip}{0pt plus 5cm}bool Bicicleta\+::get\+Avariada (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_adcf9b86f83a83b15c98f70918469e664}
+
+
+gets the bike's state of damage 
+
+\begin{DoxyReturn}{Returns}
+the damage of the bike Let us get the damage of the bike 
+\end{DoxyReturn}
+\hypertarget{class_bicicleta_a98ab039cfa35975f6d1ff2223a625a7f}{\index{Bicicleta@{Bicicleta}!get\+Empresa@{get\+Empresa}}
+\index{get\+Empresa@{get\+Empresa}!Bicicleta@{Bicicleta}}
+\subsubsection[{get\+Empresa}]{\setlength{\rightskip}{0pt plus 5cm}string Bicicleta\+::get\+Empresa (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_a98ab039cfa35975f6d1ff2223a625a7f}
+
+
+gets the bike's company 
+
+\begin{DoxyReturn}{Returns}
+the company of the bike Let us get the company of the bike 
+\end{DoxyReturn}
+\hypertarget{class_bicicleta_ac85afd4971d0b6eada6eb16f9a924118}{\index{Bicicleta@{Bicicleta}!get\+I\+D@{get\+I\+D}}
+\index{get\+I\+D@{get\+I\+D}!Bicicleta@{Bicicleta}}
+\subsubsection[{get\+I\+D}]{\setlength{\rightskip}{0pt plus 5cm}int Bicicleta\+::get\+I\+D (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_ac85afd4971d0b6eada6eb16f9a924118}
+
+
+gets the bike's id 
+
+\begin{DoxyReturn}{Returns}
+the id of the bike Let us get the id of the bike 
+\end{DoxyReturn}
+\hypertarget{class_bicicleta_adfccbf2a5c83a6c34c3454c78244cffc}{\index{Bicicleta@{Bicicleta}!get\+Preco@{get\+Preco}}
+\index{get\+Preco@{get\+Preco}!Bicicleta@{Bicicleta}}
+\subsubsection[{get\+Preco}]{\setlength{\rightskip}{0pt plus 5cm}int Bicicleta\+::get\+Preco (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_adfccbf2a5c83a6c34c3454c78244cffc}
+
+
+Gets the bike's price. 
+
+\begin{DoxyReturn}{Returns}
+the price of the bike Let us get the price of the bike 
+\end{DoxyReturn}
+\hypertarget{class_bicicleta_a05f9c922b7ebc82a1f223ba8c5d64cc2}{\index{Bicicleta@{Bicicleta}!get\+Regs\+Bicis@{get\+Regs\+Bicis}}
+\index{get\+Regs\+Bicis@{get\+Regs\+Bicis}!Bicicleta@{Bicicleta}}
+\subsubsection[{get\+Regs\+Bicis}]{\setlength{\rightskip}{0pt plus 5cm}vector$<$ {\bf Registo} $\ast$ $>$ Bicicleta\+::get\+Regs\+Bicis (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+) const}}\label{class_bicicleta_a05f9c922b7ebc82a1f223ba8c5d64cc2}
+
+
+Gets the rental record. 
+
+\begin{DoxyReturn}{Returns}
+a vector with the rental records of the vector Gets the rental record of the vector of rental records 
+\end{DoxyReturn}
+\hypertarget{class_bicicleta_a9733b1f60caff10aa814dfe38e8e459f}{\index{Bicicleta@{Bicicleta}!get\+Tamanho@{get\+Tamanho}}
+\index{get\+Tamanho@{get\+Tamanho}!Bicicleta@{Bicicleta}}
+\subsubsection[{get\+Tamanho}]{\setlength{\rightskip}{0pt plus 5cm}string Bicicleta\+::get\+Tamanho (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_a9733b1f60caff10aa814dfe38e8e459f}
+
+
+gets the bike's size 
+
+\begin{DoxyReturn}{Returns}
+the size of the bike Let us get the size of the bike 
+\end{DoxyReturn}
+\hypertarget{class_bicicleta_a4582ea6f608f9d188df0b563961d7df5}{\index{Bicicleta@{Bicicleta}!get\+Tipo@{get\+Tipo}}
+\index{get\+Tipo@{get\+Tipo}!Bicicleta@{Bicicleta}}
+\subsubsection[{get\+Tipo}]{\setlength{\rightskip}{0pt plus 5cm}string Bicicleta\+::get\+Tipo (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_a4582ea6f608f9d188df0b563961d7df5}
+
+
+gets the bike's type 
+
+\begin{DoxyReturn}{Returns}
+the type of the bike Let us get the type of the bike 
+\end{DoxyReturn}
+\hypertarget{class_bicicleta_a956979f7f43934c329b143b9d6c2da49}{\index{Bicicleta@{Bicicleta}!get\+Velocidades@{get\+Velocidades}}
+\index{get\+Velocidades@{get\+Velocidades}!Bicicleta@{Bicicleta}}
+\subsubsection[{get\+Velocidades}]{\setlength{\rightskip}{0pt plus 5cm}int Bicicleta\+::get\+Velocidades (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_a956979f7f43934c329b143b9d6c2da49}
+
+
+gets the bike's shifts 
+
+\begin{DoxyReturn}{Returns}
+the shifts of the bike Let us get the shifts of the bike 
+\end{DoxyReturn}
+\hypertarget{class_bicicleta_a900359b6b195db211f479fe5929f8d81}{\index{Bicicleta@{Bicicleta}!imprime@{imprime}}
+\index{imprime@{imprime}!Bicicleta@{Bicicleta}}
+\subsubsection[{imprime}]{\setlength{\rightskip}{0pt plus 5cm}string Bicicleta\+::imprime (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_a900359b6b195db211f479fe5929f8d81}
+
+
+Print a bike. 
+
+\begin{DoxyReturn}{Returns}
+a string with the specs of the bike Prints a bike with the specs we previously had given to it 
+\end{DoxyReturn}
+\hypertarget{class_bicicleta_aff75cc7f6d1a554a8b7c663834115575}{\index{Bicicleta@{Bicicleta}!make\+\_\+str@{make\+\_\+str}}
+\index{make\+\_\+str@{make\+\_\+str}!Bicicleta@{Bicicleta}}
+\subsubsection[{make\+\_\+str}]{\setlength{\rightskip}{0pt plus 5cm}void Bicicleta\+::make\+\_\+str (
+\begin{DoxyParamCaption}
+\item[{string}]{bike}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_aff75cc7f6d1a554a8b7c663834115575}
+
+
+Make a bike from a string that represents it. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em bike} & -\/ string with a bike This function is used in \hyperlink{class_rede_a1751f922073f6172ba676a56959a1540}{Rede\+::load\+Info()}, because it makes a bike object from a multiple line string that contains all it's information except for the rental logs \\
+\hline
+\end{DoxyParams}
+\hypertarget{class_bicicleta_a791cdbbf5016ea3a0229915b84a52a04}{\index{Bicicleta@{Bicicleta}!remove\+\_\+util@{remove\+\_\+util}}
+\index{remove\+\_\+util@{remove\+\_\+util}!Bicicleta@{Bicicleta}}
+\subsubsection[{remove\+\_\+util}]{\setlength{\rightskip}{0pt plus 5cm}bool Bicicleta\+::remove\+\_\+util (
+\begin{DoxyParamCaption}
+\item[{string}]{nome}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_a791cdbbf5016ea3a0229915b84a52a04}
+
+
+Removes the user with the name nome. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em nome} & -\/ Name of the user we want to delete \\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+true if the name is removed sucessfully and false if it doesn't Removes the user with the name nome of the vector of registrations 
+\end{DoxyReturn}
 \hypertarget{class_bicicleta_ae48de57881e09ac89a84558c79894640}{\index{Bicicleta@{Bicicleta}!set\+Empresa@{set\+Empresa}}
 \index{set\+Empresa@{set\+Empresa}!Bicicleta@{Bicicleta}}
 \subsubsection[{set\+Empresa}]{\setlength{\rightskip}{0pt plus 5cm}void Bicicleta\+::set\+Empresa (
@@ -111,6 +316,152 @@ Sets the empresa attribute of the object to emp.
 {\em emp} & -\/ New empresa for the object \\
 \hline
 \end{DoxyParams}
+\hypertarget{class_bicicleta_a6e71bf61a37f13c3da8e620760f8f4b9}{\index{Bicicleta@{Bicicleta}!set\+I\+D@{set\+I\+D}}
+\index{set\+I\+D@{set\+I\+D}!Bicicleta@{Bicicleta}}
+\subsubsection[{set\+I\+D}]{\setlength{\rightskip}{0pt plus 5cm}void Bicicleta\+::set\+I\+D (
+\begin{DoxyParamCaption}
+\item[{int}]{id}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_a6e71bf61a37f13c3da8e620760f8f4b9}
+
+
+Sets the id to the bike. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em id} & -\/ the id we want to give to the bike Sets the id we want to give to the bike \\
+\hline
+\end{DoxyParams}
+\hypertarget{class_bicicleta_a830e5be0d74c904f9e1b4d0e46fcfbf6}{\index{Bicicleta@{Bicicleta}!set\+Preco\+Dia@{set\+Preco\+Dia}}
+\index{set\+Preco\+Dia@{set\+Preco\+Dia}!Bicicleta@{Bicicleta}}
+\subsubsection[{set\+Preco\+Dia}]{\setlength{\rightskip}{0pt plus 5cm}void Bicicleta\+::set\+Preco\+Dia (
+\begin{DoxyParamCaption}
+\item[{int}]{velocidade, }
+\item[{string}]{tamanho}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_a830e5be0d74c904f9e1b4d0e46fcfbf6}
+
+
+Sets a the price of the bike per day. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em velocidade} & -\/ the shifts the bike has \\
+\hline
+{\em tamanho} & -\/ the size of the bike Sets the price of the bike, with that specs, for a day \\
+\hline
+\end{DoxyParams}
+\hypertarget{class_bicicleta_ad5861007b46516987cab6fa7cf6adee1}{\index{Bicicleta@{Bicicleta}!set\+Regs\+Bicis@{set\+Regs\+Bicis}}
+\index{set\+Regs\+Bicis@{set\+Regs\+Bicis}!Bicicleta@{Bicicleta}}
+\subsubsection[{set\+Regs\+Bicis}]{\setlength{\rightskip}{0pt plus 5cm}void Bicicleta\+::set\+Regs\+Bicis (
+\begin{DoxyParamCaption}
+\item[{vector$<$ {\bf Registo} $\ast$ $>$}]{bicis}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_ad5861007b46516987cab6fa7cf6adee1}
+
+
+Sets the rental record. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em bicis} & -\/ the rental record we want to load to the vector Sets the rental record we want to the vector of rental records \\
+\hline
+\end{DoxyParams}
+\hypertarget{class_bicicleta_a28df135cc7d332d43ca85647fa60175a}{\index{Bicicleta@{Bicicleta}!set\+Tamanho@{set\+Tamanho}}
+\index{set\+Tamanho@{set\+Tamanho}!Bicicleta@{Bicicleta}}
+\subsubsection[{set\+Tamanho}]{\setlength{\rightskip}{0pt plus 5cm}void Bicicleta\+::set\+Tamanho (
+\begin{DoxyParamCaption}
+\item[{string}]{tamanho}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_a28df135cc7d332d43ca85647fa60175a}
+
+
+Sets a new size to the bike. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em tamanho} & -\/ New size to be implemented Sets a new size to the bike \\
+\hline
+\end{DoxyParams}
+\hypertarget{class_bicicleta_a2318e7e7a22c44283e143f3c2942d721}{\index{Bicicleta@{Bicicleta}!set\+Tipo@{set\+Tipo}}
+\index{set\+Tipo@{set\+Tipo}!Bicicleta@{Bicicleta}}
+\subsubsection[{set\+Tipo}]{\setlength{\rightskip}{0pt plus 5cm}void Bicicleta\+::set\+Tipo (
+\begin{DoxyParamCaption}
+\item[{string}]{tipo}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_a2318e7e7a22c44283e143f3c2942d721}
+
+
+Sets the bike's type. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em tipo} & -\/ the type we want to give to the bike Sets the type we want to give to the bike \\
+\hline
+\end{DoxyParams}
+\hypertarget{class_bicicleta_aef781f0496eab00a16c354d52f9f1686}{\index{Bicicleta@{Bicicleta}!set\+Veloc@{set\+Veloc}}
+\index{set\+Veloc@{set\+Veloc}!Bicicleta@{Bicicleta}}
+\subsubsection[{set\+Veloc}]{\setlength{\rightskip}{0pt plus 5cm}void Bicicleta\+::set\+Veloc (
+\begin{DoxyParamCaption}
+\item[{int}]{velocidades}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_aef781f0496eab00a16c354d52f9f1686}
+
+
+Sets a new shift to the bike. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em velocidades} & -\/ New shift to be implemented Sets a new shift to the bike \\
+\hline
+\end{DoxyParams}
+\hypertarget{class_bicicleta_a34990240a07a851793053ca4063a7b8e}{\index{Bicicleta@{Bicicleta}!tipo\+\_\+valido@{tipo\+\_\+valido}}
+\index{tipo\+\_\+valido@{tipo\+\_\+valido}!Bicicleta@{Bicicleta}}
+\subsubsection[{tipo\+\_\+valido}]{\setlength{\rightskip}{0pt plus 5cm}string Bicicleta\+::tipo\+\_\+valido (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_a34990240a07a851793053ca4063a7b8e}
+
+
+Type is valid. 
+
+\begin{DoxyReturn}{Returns}
+a string saying if the type is valid or not We learn if the type we want to give to the bike is valid or not 
+\end{DoxyReturn}
+\hypertarget{class_bicicleta_a0f6d8c8efea7822160a397ef040438d1}{\index{Bicicleta@{Bicicleta}!ultimo\+\_\+reg@{ultimo\+\_\+reg}}
+\index{ultimo\+\_\+reg@{ultimo\+\_\+reg}!Bicicleta@{Bicicleta}}
+\subsubsection[{ultimo\+\_\+reg}]{\setlength{\rightskip}{0pt plus 5cm}{\bf Registo} $\ast$ Bicicleta\+::ultimo\+\_\+reg (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+) const}}\label{class_bicicleta_a0f6d8c8efea7822160a397ef040438d1}
+
+
+Show the last of the rental records. 
+
+\begin{DoxyReturn}{Returns}
+a pointer to a rental record with the last of the rental records Show the last of the rental records 
+\end{DoxyReturn}
+\hypertarget{class_bicicleta_a540f165785ed17b710a67c2a59991a48}{\index{Bicicleta@{Bicicleta}!velocidades\+\_\+valido@{velocidades\+\_\+valido}}
+\index{velocidades\+\_\+valido@{velocidades\+\_\+valido}!Bicicleta@{Bicicleta}}
+\subsubsection[{velocidades\+\_\+valido}]{\setlength{\rightskip}{0pt plus 5cm}bool Bicicleta\+::velocidades\+\_\+valido (
+\begin{DoxyParamCaption}
+\item[{int}]{veloc}
+\end{DoxyParamCaption}
+)}}\label{class_bicicleta_a540f165785ed17b710a67c2a59991a48}
+
+
+Shifts are valid. 
+
+
+\begin{DoxyParams}{Parameters}
+{\em veloc} & -\/ shift to compare with \\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+true if shift is valid, false if it isn't We check if the shift we want to give to the bike is valid or not 
+\end{DoxyReturn}
 
 
 The documentation for this class was generated from the following files\+:\begin{DoxyCompactItemize}
