--- a/bike/src/latex/class_ut__ocasional.tex
+++ b/bike/src/latex/class_ut__ocasional.tex
@@ -35,9 +35,8 @@ int \hyperlink{class_ut__ocasional_a372c795cc67b402e54dc78e6e24c3779}{get\+Custo
 \begin{DoxyCompactList}\small\item\em Get service cost for \hyperlink{class_ut__ocasional}{Ut\+\_\+ocasional} Redefinition of the same funtion on \hyperlink{class_utilizador}{Utilizador} class. \end{DoxyCompactList}\item 
 string \hyperlink{class_ut__ocasional_a500c4745815fed11a495c258a06f973a}{get\+\_\+str} () const 
 \begin{DoxyCompactList}\small\item\em Get string that represents user This function is used in \hyperlink{class_rede_abec1da6660663cd58e6851737219959e}{Rede\+::store\+Info()}, because it converts the \hyperlink{class_ut__ocasional}{Ut\+\_\+ocasional} object to a multiple line string containing all of it's information except the rental logs. \end{DoxyCompactList}\item 
-\hypertarget{class_ut__ocasional_a215c8d086f1285c12e5bb8b42ccef682}{void \hyperlink{class_ut__ocasional_a215c8d086f1285c12e5bb8b42ccef682}{make\+\_\+str} (string user)}\label{class_ut__ocasional_a215c8d086f1285c12e5bb8b42ccef682}
-
-\begin{DoxyCompactList}\small\item\em Make a user from a string that represents it (in this case, a \hyperlink{class_ut__ocasional}{Ut\+\_\+ocasional} user) This function is used in \hyperlink{class_rede_a1751f922073f6172ba676a56959a1540}{Rede\+::load\+Info()}, because it makes a \hyperlink{class_ut__ocasional}{Ut\+\_\+ocasional} object from a multiple line string that contains all it's information except for the rental logs. \end{DoxyCompactList}\end{DoxyCompactItemize}
+void \hyperlink{class_ut__ocasional_a215c8d086f1285c12e5bb8b42ccef682}{make\+\_\+str} (string user)
+\begin{DoxyCompactList}\small\item\em Make a user from a string that represents it (in this case, a \hyperlink{class_ut__ocasional}{Ut\+\_\+ocasional} user) \end{DoxyCompactList}\end{DoxyCompactItemize}
 \subsection*{Additional Inherited Members}
 
 
@@ -82,6 +81,26 @@ service cost for the \hyperlink{class_ut__ocasional}{Ut\+\_\+ocasional} user
 
 
 Reimplemented from \hyperlink{class_utilizador_a988e8a7c0cc0625866350a476a5d7b62}{Utilizador}.
+
+\hypertarget{class_ut__ocasional_a215c8d086f1285c12e5bb8b42ccef682}{\index{Ut\+\_\+ocasional@{Ut\+\_\+ocasional}!make\+\_\+str@{make\+\_\+str}}
+\index{make\+\_\+str@{make\+\_\+str}!Ut\+\_\+ocasional@{Ut\+\_\+ocasional}}
+\subsubsection[{make\+\_\+str}]{\setlength{\rightskip}{0pt plus 5cm}void Ut\+\_\+ocasional\+::make\+\_\+str (
+\begin{DoxyParamCaption}
+\item[{string}]{user}
+\end{DoxyParamCaption}
+)\hspace{0.3cm}{\ttfamily [virtual]}}}\label{class_ut__ocasional_a215c8d086f1285c12e5bb8b42ccef682}
+
+
+Make a user from a string that represents it (in this case, a \hyperlink{class_ut__ocasional}{Ut\+\_\+ocasional} user) 
+
+
+\begin{DoxyParams}{Parameters}
+{\em user} & -\/ string with a user This function is used in \hyperlink{class_rede_a1751f922073f6172ba676a56959a1540}{Rede\+::load\+Info()}, because it makes a \hyperlink{class_ut__ocasional}{Ut\+\_\+ocasional} object from a multiple line string that contains all it's information except for the rental logs \\
+\hline
+\end{DoxyParams}
+
+
+Reimplemented from \hyperlink{class_utilizador_ae2d157ed39a4f4d8e96c288ac7de320d}{Utilizador}.
 
 
 
